tests/ui/inline_mod.stderr
error: attribute on module
 --> $DIR/inline_mod.rs:6:5
  |
6 | mod foo {}
  |     ^^^
